Fix for bug 157157. Always use nsInputStreamTee objects for streaming plugin data. r=beard